fix to wrap issue

--- a/portfolio/styles/main.css
+++ b/portfolio/styles/main.css
@@ -11,6 +11,12 @@
   padding: 0;
 }
 
+.container {
+	align-content: center;
+	justify-content: center;
+	width: 100%;
+}
+
 .desktop-nav {
   display: none;
 }
@@ -603,10 +609,14 @@ h6 {
 
 .about_text-wrap {
   padding: 20px 20px;
+    align-content: center;
+	justify-content: center;	
 }
 
 .about_intro {
   padding: 40px 20px 0px;
+  align-content: center;
+	justify-content: center;
 }
 
 .about_container {
@@ -767,9 +777,9 @@ h6 {
 .flow_image {
   background-color: #ffffff;
   object-fit: cover;
-  width: 30%;
-  height: 30%;
-  padding: 20px 20px 20px 20px;
+  width: 50%;
+  height: 50%;
+  padding: 20px 20px;
   margin: 10px;
 }
 
@@ -901,7 +911,7 @@ a .ContactLinks {
 @media screen and (min-width: 600px) {
   .hero_about {
     width: 60%;
-    max-width: 760px;
+    max-width: 460px;
     float: left;
     left: 200px;
   }
@@ -1001,7 +1011,7 @@ a .ContactLinks {
   padding: 0px 20px;
 }
 
-@media screen and (min-width: 950px) {
+@media screen and (min-width: 850px) {
   .container {}
 
   .hero_2 {
@@ -1025,6 +1035,10 @@ a .ContactLinks {
   .project_image {
     margin-top: 40px;
     vertical-align: text-bottom;
+  }
+
+  .flow-image {
+    width: 200px;
   }
 
   .about_intro {
@@ -1133,6 +1147,10 @@ a .ContactLinks {
     display: inline-block;
   }
 
+  .flow_images {
+    display: inline-block;
+  }
+
   .Primary_button {
     font-size: 13px;
     padding: 9px 14px 7px;
@@ -1186,6 +1204,11 @@ a .ContactLinks {
 
   .future {
     padding: 10px 20px 30px;
+  }
+
+  .section_text {
+    align-content: center;
+    justify-content: center
   }
 
   .project_container {
